@startuml

title __MODEL's Class Diagram__\n

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.GameModel {
          - HEIGHT : float
          - SCREEN_HEIGHT : float
          - SCREEN_WIDTH : float
          - WIDTH : float
          - camera : OrthographicCamera
          - textButtons : HashMap<String, TextButton>
          + GameModel()
          + addTextButton()
          + getCamera()
          + getGameEngine()
          + getTextButton()
          + moveCameraToSpaceship()
          + navigateToLobby()
          + renderBackground()
          + renderBoundary()
          + renderNetworkBatch()
          + renderNetworkShapes()
          - renderAsteroids()
          - renderExplosions()
          - renderHealthBar()
          - renderPickups()
          - renderPowerups()
          - renderShieldBar()
          - renderSpaceships()
          {static} - sortByValue()
          - trim()
          - updatePlayerScores()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.LobbyModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.MainMenuModel {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.MatchmakingModel {
          - connecting : boolean
          - connectingFailed : boolean
          - matchmakingDone : boolean
          - matchmakingListener : Listener
          - positionInQueue : int
          - queueSize : int
          + MatchmakingModel()
          + dispose()
          + getPositionInQueue()
          + getQueueSize()
          + isConnected()
          + isConnecting()
          + isConnectingFailed()
          + isMatchmakingDone()
          + setConnecting()
          + setConnectingFailed()
          + setMatchmakingDone()
          + setPositionInQueue()
          + setQueueSize()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69 {
    namespace model {
      class no.ntnu.idi.apollo69.model.ServerUpdateListener {
          + received()
          ~ ServerUpdateListener()
      }
    }
  }
  

  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.game_engine.Background : background
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.network.GameClient : gameClient
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.game_engine.GameEngine : gameEngine
  no.ntnu.idi.apollo69.model.GameModel o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator
  no.ntnu.idi.apollo69.model.MatchmakingModel .up.|> com.badlogic.gdx.utils.Disposable
  no.ntnu.idi.apollo69.model.ServerUpdateListener -up-|> com.esotericsoftware.kryonet.Listener
  no.ntnu.idi.apollo69.model.ServerUpdateListener o-- no.ntnu.idi.apollo69.game_engine.GameEngine : gameEngine
  no.ntnu.idi.apollo69.model.ServerUpdateListener o-- no.ntnu.idi.apollo69.navigation.Navigator : navigator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
